<resources>
    <string name="app_name">DbSE</string>
    <string name="title_activity_universities">Universities</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign Out</string>
    <string name="register1">Create your</string>
    <string name="register2">account!</string>
    <!--these strings define hints for edit texts in singup form-->
    <string name="signupemail">E-mail</string>
    <string name="signuppassword">Password</string>
    <string name="singupusername">UserName</string>

    <!--these strings define hints for edit texts in edit profile form-->
    <string name="old_email">Old e-mail</string>
    <string name="old_password">Old password</string>
    <string name="new_email">New e-mail</string>
    <string name="new_password">New password</string>
    <string name="new_username">New userName</string>
    <string name="save_changes">Save changes</string>

    <!--string for create account button-->
    <string name="createaccount">Create Account</string>
    <string name="next">NEXT</string>
    <string name="hint_real_name">Real Name</string>
    <string name="emptyerror">Should not be blank</string>
    <string name="confirmationcode">Confirmation Code</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="change">change</string>

    <!--these strings for Sign in activity-->
    <string name="sign_in_email_hint">E-mail</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="froget_pass">Forgotten Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in_title">Egyptian Universities</string>
    <string name="contacts_text">Contancts</string>
    <string name="facebook">Facebook Page</string>
    <string name="forget_pass_title1">We will send a new password</string>
    <string name="emailORusername">UserName or e-mail</string>


    <!-- Strings for Search Input Dialog-->
    <string name="item_name">Name</string>
    <string name="item_name_hint">Enter University Name</string>
    <string name="fees">Fees</string>
    <string name="lower_bound">From</string>
    <string name="upper_bound">To</string>
    <string name="addcer">Admission Certificates</string>
    <string name="yos">Years Of Study</string>
    <string name="degreeawarded">Degree Awarded</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--temp strings will be deleted-->

    <string-array name="Universities">
        <item>Cairo University</item>
        <item>Alexandria University</item>
        <item>T2feeel University</item>
        <item>Ain Shames University</item>
        <item>Helwan University</item>
    </string-array>
    <string-array name="h1">
        <item>Faculty Of Engineering</item>
        <item>Faculty Of Medicine</item>
        <item>Faculty of ComputerScince</item>
    </string-array>

    <string-array name="h2">
        <item>Faculty Of Engineering</item>
        <item>Faculty Of Medicine</item>

    </string-array>

    <string-array name="h3">
        <item>Faculty Of Engineering</item>
        <item>Faculty Of Medicine</item>
        <item>Faculty of ComputerScince</item>
        <item>Faculty of Masscomm</item>
    </string-array>

    <string-array name="h4">
        <item>Faculty Of Medicine</item>
        <item>Faculty of Masscomm</item>
        <item>Faculty of Cs</item>
    </string-array>
    <string-array name="h5">
        <item>Faculty Of Engineering</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="your_string_here">
        <u>LocationOnMap</u>.
    </string>
    <!--temp strings will be deleted-->
    <!-- Token-->
    <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjEsImlzcyI6Imh0dHA6XC9cL2xvY2FsaG9zdFwvZGJzZVwvcHVibGljXC9hcGlcL3YxXC9zaWduaW4iLCJpYXQiOjE0OTI4ODIyNzUsImV4cCI6MTQ5Mjg4NTg3NSwibmJmIjoxNDkyODgyMjc1LCJqdGkiOiJ3aDFOV0FCSXV6WVRpcmp2In0.DfWKYNFHSuuhkYDNBS0D_YC4NnoZ72du9xAWZ0ugZg8</string>

    <string name="url">http://25093b70.ngrok.io/dbse/public/api/v1/</string>
    <string name="imageurl">http://25093b70.ngrok.io/dbse/public/</string>
    <string name="colorforfacultieslist">#1976D2</string>
</resources>
