<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singuprelativelayout"
    android:background="@color/dbsecolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmedsaleh.dbse.SignUp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/editProfileLinearlayout"
        android:layout_centerHorizontal="true">
        <EditText
            style="@style/edittext_sign_in_up_style"
            android:hint="@string/old_email"
            android:id="@+id/old_email" />
        <EditText
            style="@style/edittext_sign_in_up_style"
            android:hint="@string/old_password"
            android:id="@+id/emailedittext" />
        <EditText
            style="@style/edittext_sign_in_up_style"
            android:hint="@string/new_username"
            android:id="@+id/new_username"/>
        <EditText
            style="@style/edittext_sign_in_up_style"
            android:hint="@string/new_email"
            android:id="@+id/new_email"/>
        <EditText
            style="@style/edittext_sign_in_up_style"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:id="@+id/new_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/Save_changes_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editProfileLinearlayout"
        android:background="@drawable/roundedborder"
        />


</RelativeLayout>
