<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/forget_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass_title1"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/DarkBlack"
        android:padding="16dp"/>
    <EditText
        android:id="@+id/forget_password_code_editText"
        style="@style/edittext_sign_in_up_style"
        android:inputType="text"
        android:hint="@string/signupemail"
        android:layout_below="@+id/forget_password_title"/>
    <Button
        android:id="@+id/forget_code_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedborder"
        android:layout_below="@+id/forget_password_code_editText" />
</RelativeLayout>